samples/_failures_safe/1761210915_a6ae22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bafbefa4.c: In function ‘main’:
./samples/SAFE/__tmp_bafbefa4.c:173:17: error: expected declaration or statement at end of input
  173 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_bafbefa4.c:173:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bafbefa4.c:173:17: error: expected declaration or statement at end of input
